--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/ea40a0250c.js" crossorigin="anonymous"></script>
+
+    <style>
+
+    </style>
 </head>
 
 <body>
@@ -17,7 +24,7 @@
     <nav class="navbar navbar-expand-md navbar-light bg-light">
 
         <span class="navbar-text ml-5 ">Kacey Churchill</span>
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto navbax-sticky">
             <li class="nav-item"><a class="nav-link" href="#">About</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
@@ -48,15 +55,15 @@
             </div>
 
 
-            <footer>
-                <hr>
-            </footer>
+
         </div>
     </main>
 
 
-
-
+    <hr class="bottom-hr">
+    <footer>
+        <p><i class="far fa-copyright">Copyright</i></p>
+    </footer>
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
